--- a/packages/iab-client/package.json
+++ b/packages/iab-client/package.json
@@ -25,13 +25,15 @@
     "@ygoto3/omap-vast-parser": "^0.0.3"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
+    "@types/xmldom": "^0.1.34",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "xmldom": "^0.6.0"
   },
   "files": [
     "dist"
