--- a/packages/vast-parser/package.json
+++ b/packages/vast-parser/package.json
@@ -23,6 +23,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/xmldom": "^0.1.34",
     "buffer": "^6.0.3",
     "stream": "^0.0.2",
     "ts-loader": "^9.5.1",
@@ -30,7 +31,8 @@
     "uvu": "^0.5.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "xmldom": "^0.6.0"
   },
   "files": [
     "dist"
