--- a/packages/vmap-parser/package.json
+++ b/packages/vmap-parser/package.json
@@ -23,15 +23,17 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/xmldom": "^0.1.34",
     "buffer": "^6.0.3",
     "stream": "^0.0.2",
-    "ts-node": "^10.9.2",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "xmldom": "^0.6.0"
   },
   "files": [
     "dist"
